# my-rust-tinyrender

./: Cargo.toml
crates/math_macro/: Cargo.toml
crates/math_macro/src/: lib.rs
src/: lib.rs  main.rs
src/geometry/: geometry.rs
src/math/: matrix.rs  mod.rs  quaternion.rs  test.rs  vec.rs
src/render/: line.rs  mod.rs  test.rs  triangle.rs
src/window_mgr/: mod.rs
